fix gap end menu content

--- a/src/experiences/1-batiment/css/style.css
+++ b/src/experiences/1-batiment/css/style.css
@@ -107,7 +107,7 @@ body
 .end-menu-content {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 
 .end-menu-buttons {
